# plugins

./: CMakeLists.txt  create_plugin.py
applications/: metadata.json
calculator/: metadata.json
chromebookmarks/: metadata.json
debug/: metadata.json
externalextensions/: metadata.json
files/: metadata.json
firefoxbookmarks/: metadata.json
mpris/: metadata.json
qmlboxmodel/: metadata.json
ssh/: metadata.json
system/: metadata.json
templateExtension/: metadata.json
terminal/: metadata.json
virtualbox/: metadata.json
websearch/: metadata.json
widgetboxmodel/: metadata.json
xcbws/: CMakeLists.txt  configwidget.ui  metadata.json
xcbws/src/: configwidget.cpp  configwidget.h  extension.cpp  extension.h  xcbwindowhandle.cpp  xcbwindowhandle.h
